--- a/scss/_global.scss
+++ b/scss/_global.scss
@@ -104,13 +104,5 @@ body {
         max-width: auto;
         float: right;
         padding-left: 2vw;
-        padding-top: 2vh;
     }
 }
-
-// .blurb {
-//     float: none;
-//     @media (min-width: 768px) {
-//         float: right;
-//     }
-// }
